# status-report

./: .codecov.yml  .coveragerc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .pylintrc.project-dict.txt  Makefile  README-Windows-WSL2.md  README-pre-commmit.md  README-pytest-chroot.md  README-pytest.md  README-python-install.md  README.md  bugtoolTarfile.py  cspell.config.yaml  help2man  pyproject.toml  pytest.ini  pytype.cfg  requirements-dev.txt  requirements.txt  setup.cfg  sexp.py  sonar-project.properties  xen-bugtool  xenserver-status-report.spec.in
.github/instructions/: darker.instructions.md  no-refacor.instructions.md  tarfile.instructions.md  type-comments.instructions.md  use-modern-type-syntax-in-comments.instructions.md
.github/template/bugtool-run-all-entries/: action.yaml
.github/template/bugtool-run-entry/: action.yaml
.github/workflows/: PYTHONWARNINGS-problemMatcher.json  Python-problemMatcher-status-report.json  alpine-python2.yml  check_branch-needs-rebase.py  dom0-tests.yml  main.yml  run-all-entries-in-Dom0.yml  tests.yml
doc/: coverage.md  operation.md  plugins.md  pre-commit.md  release.md  testing.md
ext/: Makefile  bugtool-conn-tests.spec.in
ext/bugtool-conn-tests/config/: conntest.xml
ext/bugtool-conn-tests/config/conntest/: conntest.xml
ext/bugtool-conn-tests/tools/: resolve
stubs/: tarfile.pyi
tests/: conftest.py
tests/integration/: conftest.py  inventory.xsd  namespace_container.py  sar-file-collection.test.sh  test_system_load.py  test_xenserver_config.py  utils.py  xenserver-config-systemd.sh
tests/integration/dom0-template/etc/: xensource-inventory
tests/integration/dom0-template/etc/systemd/system/basic.target.wants/: make-dummy-sr.service
tests/integration/dom0-template/etc/xensource/bugtool/mock/: stuff.xml
tests/integration/dom0-template/usr/lib/systemd/system/: iptables.service
tests/integration/dom0-template/usr/sbin/: mdadm  modinfo  multipathd  xenstore-ls
tests/mocks/xen/lowlevel/xc/: __init__.py
tests/unit/: conftest-README.md  conftest.py  test_cmd_output.py  test_dir_list.py  test_dump_xapi_procs.py  test_dump_xapi_rrds.py  test_file_output.py  test_filter_xapi_clusterd_db.py  test_fs_funcs.py  test_load_plugins.py  test_main.py  test_mdadm_arrays.py  test_output.py  test_process_output.modules  test_process_output.py  test_snmp.py  test_xapidb_filter.py
